# devon

./: README.md  main.py  pyproject.toml  query_graph.py  skills-lock.json
backend/devon/: agent.py  cli.py  coder.py  config.py  manager.py  persistence.py  tools.py
backend/devon/server/: app.py  main.py  output_buffer.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx  chat-interface.tsx  editor-view.tsx  file-explorer.tsx  onboarding.tsx  project-view.tsx  settings.tsx
frontend/components/ui/: alert.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  sidebar.tsx  tabs.tsx
frontend/electron/: main.js  main.ts  preload.js  preload.ts
frontend/lib/: api.ts  electron.d.ts
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/devon/: agent.py  cli.py  coder.py  config.py  github_service.py  manager.py  persistence.py  tools.py
src/devon/parser/: debug_api.py  debug_ast.py  parser.py  pipeline.py  queries.py
