[project]
name = "devon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.2",
    "deepagents>=0.5.2",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
]
[project.scripts]
devon = "devon.cli:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
